Task 4: Add database update swagger yaml
Update controller and service
