# user_swagger_based_api/api/routers/userRouter.js
@@ -2,21 +2,23 @@ const express = require('express');
 const router = express.Router();
 const userController = require('../controllers/userController');
 const middleware = require('../middlewares/middlewares');
+const schemas = require('../schemas/schemas');
 
-
-router.get('/:id', middleware.checkToken,
-    middleware.traceRequest('getUserById'),
+router.get('/:id', middleware.traceRequest('getUserById'),
     middleware.logErrors('getUserById',  userController.getUserById));
 
-router.get('/login/:login/limit/:limit', middleware.checkToken,
-    middleware.traceRequest('getAutoSuggestUsers'),
-    middleware.logErrors('getAutoSuggestUsers', userController.getAutoSuggestUsers));
-
-router.post('/', middleware.checkToken,
-    middleware.traceRequest('createOrUpdateUser'),
+router.post('/', middleware.traceRequest('createOrUpdateUser'),
+    middleware.validateSchema(schemas.userSchema),
     middleware.logErrors('createOrUpdateUser', userController.createOrUpdateUser));
 
-router.post('/delete/:id', middleware.checkToken,
+router.get('/', middleware.traceRequest('getAllUsers'),
+    middleware.logErrors('createOrUpdateUser', userController.getAllUsers));
+
+
+router.get('/login/:login/limit/:limit', middleware.traceRequest('getAutoSuggestUsers'),
+    middleware.logErrors('getAutoSuggestUsers', userController.getAutoSuggestUsers));
+
+router.post('/delete/:id',
     middleware.traceRequest('deleteUser'),
     middleware.logErrors('deleteUser', userController.deleteUser));
 
