# user_swagger_based_api/api/services/userService.js
@@ -1,41 +1,23 @@
-const arraySort = require('array-sort');
-const uuid = require('uuid');
-const storage = new Map();
-storage.set('1', { id:'1', login:'admin', password:'admin', groupId:'admin', age:100 });
+// const arraySort = require('array-sort');
+// const uuid = require('uuid');
+const User = require('../models/user');
 
+exports.getAllUsers =  () => {
+    return User.find();
+};
 exports.getUserById =  (id) => {
-    const user = storage.get(id);
-    if (isUserExist(user)) {
-        return user;
-    }
-    throw new Error(`No user found with id ${id}`);
+    return User.findById(id);
 };
 
-exports.createIdForNewUser = (user) => {
-    if ('id' in user && storage.has(user.id)) {
-        return user.id;
-    }
-    return uuid.v4();
+exports.createOrUpdateUser =   (user) => {
+    return User.findOneAndUpdate({ login:user.login }, user, { upsert:true, new:true });
 };
 
 exports.getAutoSuggestUsers = (loginSubstring, limit) => {
-    return arraySort(Array.from(storage.values()), 'login')
-        .filter(user => {
-            return user.login.toUpperCase()
-                .includes(loginSubstring.toUpperCase());
-        })
-        .slice(0, limit + 1);
+    return User.find({ login: { '$regex': `${loginSubstring}`, '$options': 'i' } })
+        .limit(parseInt(limit, 10));
 };
 
 exports.deleteUser = (id) => {
-    const  userToDelete = storage.get(id);
-    userToDelete.isDeleted = true;
-    storage.set(id, userToDelete);
+    return User.deleteOne({ _id: id });
 };
-
-exports.storage = storage;
-
-function isUserExist(user) {
-    return  user !== undefined
-      && (!user.hasOwnProperty('isDeleted') || !user.isDeleted);
-}
