# user_swagger_based_api/api/swagger/swagger.yaml
@@ -7,8 +7,6 @@ info:
 tags:
 - name: user
   description: Operations about user
-  externalDocs:
-    url: http://swagger.io
 # schemes:
 # - http
 paths:
@@ -17,25 +15,24 @@ paths:
       tags:
       - user
       summary: Create or update user
-      description: This can only be done by the logged in user.
       operationId: createUserOrUpdate
       produces:
       - application/json
       parameters:
       - in: body
         name: body
-        description: Created user object
+        description: Created or updated user object
         required: true
         schema:
           $ref: '#/definitions/User'
       responses:
-        default:
-          description: successful operation
+        200:
+          description: User created or updated
+        400:
+          description: Login or password don`t match schema
     get:
       tags:
       - user
-      summary: Create user
-      description: This can only be done by the logged in user.
       operationId: getAllUsers
       produces:
       - application/json
@@ -49,8 +46,9 @@ paths:
           items:
             $ref: '#/definitions/User'
       responses:
-        default:
-          description: successful operation
+        200:
+          description: All users returned
+
   /users/{id}:
     get:
       tags:
@@ -62,7 +60,6 @@ paths:
       parameters:
       - name: id
         in: path
-        description: The id that needs to be fetched. Use user1 for testing. 
         required: true
         type: string
       responses:
@@ -70,27 +67,49 @@ paths:
           description: successful operation
           schema:
             $ref: '#/definitions/User'
-        400:
-          description: Invalid login supplied
         404:
           description: User not found
-    delete:
+  /users/delete/{id}:
+    post:
       tags:
       - user
       summary: Delete user
-      description: This can only be done by the logged in user.
       operationId: deleteUser
       produces:
       - application/json
       parameters:
       - name: id
         in: path
-        description: The name that needs to be deleted
+        description: User id that needs to be deleted
         required: true
         type: string
       responses:
         404:
           description: User not found
+  /users/login/{login}:/limit/{limit}:
+    get:
+      tags:
+      - user
+      summary: Get user by user id
+      operationId: getAutoSuggestUsers
+      produces:
+      - application/json
+      parameters:
+      - name: login
+        in: path
+        required: true
+        type: string
+      - name: limit
+        in: path
+        required: true
+        type: string
+      responses:
+        200:
+          description: successful operation
+          schema:
+           type: array
+           items:
+            $ref: '#/definitions/User'
 definitions:
   User:
     type: object
@@ -106,7 +125,5 @@ definitions:
     xml:
       name: User
 # Added by API Auto Mocking Plugin
-host: localhost
-basePath: /YaroslavKratt/nodejs_mentoring/1.0.0
-schemes:
- - http
+host: localhost:3000
+basePath: /
